syntax = "proto3";

package mmorpg.proto;

// [SEQUENCE: MVP6-28] Sent by the client over UDP to associate its UDP endpoint with its TCP session.
message UdpHandshake {
  uint32 session_id = 1;
}
